# isar-core

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md
.github/workflows/: deploy.yml  rust.yml
dart-ffi/: Cargo.toml
dart-ffi/src/: async_txn.rs  crud.rs  dart.rs  error.rs  filter.rs  instance.rs  isar_try.rs  lib.rs  query.rs  raw_object_set.rs  schema.rs  txn.rs  where_clause.rs
dart-ffi/tools/: build_android.sh  build_desktop.sh
lmdb-sys/: Cargo.toml  bindgen.rs  build.rs
lmdb-sys/src/: bindings.rs
src/: bank.rs  bank_manager.rs  collection.rs  collection_manager.rs  data_dbs.rs  error.rs  field.rs  index.rs  instance.rs  lib.rs  link.rs  object_id.rs  object_set.rs  schema.rs  schema_diff.rs  txn.rs
src/api/: crud.rs  instance.rs  mod.rs  query.rs  txn.rs
src/ffi/: crud.rs  filter.rs  instance.rs  isar_try.rs  mod.rs  query.rs  query_where.rs  raw_object_set.rs  schema.rs  where_clause.rs
src/lmdb/: cursor.rs  db.rs  env.rs  error.rs  mod.rs  txn.rs
src/object/: data_type.rs  mod.rs  object_builder.rs  object_id.rs  object_id_generator.rs  object_info.rs  object_set.rs  property.rs
src/query/: filter.rs  key_range.rs  mod.rs  query.rs  query_builder.rs  where_clause.rs  where_executor.rs
src/schema/: collection_migrator.rs  collection_schema.rs  field_schema.rs  index_schema.rs  link_schema.rs  mod.rs  property_schema.rs  schema.rs  schema_diff.rs  schema_manager.rs
src/utils/: debug.rs  mockable_rand.rs  mockable_time.rs  mod.rs
tests/: collection.rs
tests/common/: mod.rs
tools/: build_android.sh  build_desktop.sh
