[package]
name = "isar-core"
version = "0.1.0"
authors = ["Simon Leier <simonleier@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
itertools = "0.8.2"
enum_dispatch = "0.2.1"
lmdb-rkv-sys = { git = "https://github.com/isar/lmdb-rs", branch = "keysize" }
libc = ""
wyhash = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.6"
thiserror = "1.0"

[dev-dependencies]
cfg-if = "0.1.10"
mockall = "0.7.1"
tempdir = "0.3.7"

[lib]
crate-type=["cdylib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1