[package]
name = "isar-core"
version = "0.1.0"
authors = ["Simon Leier <simonleier@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"
enum_dispatch = "0.3.3"
lmdb-sys = { path = "./lmdb-sys" }
libc = ""
wyhash = "0.4.1"
serde =  { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
serde_repr = "0.1.6"
thiserror = "1.0.20"
time = "0.2.22"
unicase = "2.6.0"

[dev-dependencies]
cfg-if = "0.1.10"
tempfile = "3"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1