[package]
name = "isar-core"
version = "0.1.0"
authors = ["Simon Leier <simonleier@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.0"
itertools = "0.10.0"
enum_dispatch = "0.3.4"
lmdb-sys = { path = "./lmdb-sys" }
libc = ""
wyhash = "0.5.0"
serde =  { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
serde_repr = "0.1.6"
thiserror = "1.0.22"
time = "0.2.23"
enum-ordinalize = "3.1.8"
hashbrown = "0.9"
hex = "0.4.2"

[dev-dependencies]
cfg-if = "1.0.0"
tempfile = "3"
float_next_after = "0.1.5"

[profile.release]
lto = true
codegen-units = 1